<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/rank_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rank"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal" />

    <TextView
        android:id="@+id/player_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/player"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal" />

    <TextView
        android:id="@+id/score_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal" />

</LinearLayout>