<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentBlack">

    <ImageView
        android:id="@+id/close_graphic_view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@mipmap/close_circle_icon"
        app:layout_constraintBottom_toBottomOf="@+id/action_btn_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/action_btn_cl" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_btn_cl"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/close_graphic_view_btn"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/undo_score_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/white_border_red_pressed_button_bg"
            android:text="@string/undo_score"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/up_graphic_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/up_graphic_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/blue_btn_fourcorners_radius_3dip"
            android:text="@string/up_graphic"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/undo_score_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/graphic_fl"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_btn_cl">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hit_graphic_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/graphic_left_part_preview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/white_border_transparent_bg"
                app:layout_constraintEnd_toStartOf="@+id/graphic_right_part_preview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/player_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:maxWidth="90dp"
                    android:maxLines="1"
                    android:text="冯珊珊珊"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hole_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:maxWidth="90dp"
                    android:maxLines="1"
                    android:text="第14洞"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintEnd_toStartOf="@+id/hole_par_tv"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hole_par_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="标准杆 4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintEnd_toStartOf="@+id/hole_total_yard_tv"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hole_total_yard_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:maxLines="1"
                    android:text="455码"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/hole_total_yard_tv" />

                <TextView
                    android:id="@+id/current_hit_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="第2杆"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line1" />

                <TextView
                    android:id="@+id/current_hit_club_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="3号铁"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintStart_toEndOf="@+id/current_hit_number_tv"
                    app:layout_constraintTop_toTopOf="@+id/current_hit_number_tv" />

                <TextView
                    android:id="@+id/current_hit_to_pin_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="距离旗杆225码"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintStart_toEndOf="@+id/current_hit_club_tv"
                    app:layout_constraintTop_toTopOf="@+id/current_hit_club_tv" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/current_hit_number_tv" />

                <TextView
                    android:id="@+id/prev_hit_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="第1杆"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line2" />

                <TextView
                    android:id="@+id/prev_hit_club_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="1号木"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintStart_toEndOf="@+id/prev_hit_number_tv"
                    app:layout_constraintTop_toTopOf="@+id/prev_hit_number_tv" />

                <TextView
                    android:id="@+id/prev_hit_yard_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="230码"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintStart_toEndOf="@+id/prev_hit_club_tv"
                    app:layout_constraintTop_toTopOf="@+id/prev_hit_club_tv" />

                <TextView
                    android:id="@+id/prev_hit_place_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="落点在长草"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintStart_toEndOf="@+id/prev_hit_yard_tv"
                    app:layout_constraintTop_toTopOf="@+id/prev_hit_yard_tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/graphic_right_part_preview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/white_border_transparent_bg_2"
                app:layout_constraintBottom_toBottomOf="@+id/graphic_left_part_preview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/score"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/score_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintBottom_toBottomOf="@+id/line3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/rank"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line3" />

                <TextView
                    android:id="@+id/rank_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/line3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/white_border_transparent_bg3">

            <LinearLayout
                android:id="@+id/rank_head_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rank"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/player"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/score"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_normal" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rank_head_ll" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/graphic_type_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/this_group_rank_graphic"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphic_fl" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/player"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_normal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/graphic_type_btn" />

    <com.volley.library.flowtag.FlowTagLayout
        android:id="@+id/player_flowlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />
</androidx.constraintlayout.widget.ConstraintLayout>